--- a/OnlineStore/ClientApp/index.html
+++ b/OnlineStore/ClientApp/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <the-shop></the-shop>
+    <the-shop></the-shop>
+    <app-shop-map></app-shop-map>
 </body>
 </html>
